Fixes #10257: Button are not correctly aligned compared to tables in 4.1

--- a/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
+++ b/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
@@ -1021,6 +1021,9 @@ a.sidebar-toggle{
 }
 
 /* --- NODE PAGE --- */
+#submitSearch {
+  padding-left: 7px;
+}
 .errorSaving.alert-danger{
   margin-top:10px;
 }
